# ultraviolet

./: .gitignore  Cargo.toml  Dockerfile  Makefile
.devcontainer/: Dockerfile
ai/: AI_CONTEXT.md
ai/knowledge/: 8bf72368-02c6-42ea-ae4c-562fe78921f6.toml
blue-ada/: Cargo.toml  manifest.toml
blue-ada/src/: lib.rs
blue-ai/: Cargo.toml  manifest.toml  manifest.toml.bak
blue-ai/src/: lib.rs  server.rs  ws.rs
blue-ai/web/: index.html  script.js  styles.css
blue-cli/: Cargo.toml
blue-cli/src/: args.rs  main.rs  namespace.rs
blue-cmd/: Cargo.toml  manifest.toml
blue-cmd/src/: lib.rs
blue-core/: Cargo.toml
blue-core-ai/: Cargo.toml  manifest.toml  manifest.toml.bak
blue-core-ai/src/: lib.rs
blue-core-cmd/: Cargo.toml  manifest.toml
blue-core-cmd/src/: lib.rs
blue-core-download/: Cargo.toml  manifest.toml
blue-core-download/src/: lib.rs
blue-core-process/: Cargo.toml  manifest.toml
blue-core-process/src/: error.rs  lib.rs  output.rs  process.rs
blue-core/src/: context.rs  error.rs  lib.rs  manifest.rs  module.rs  streaming.rs
blue-download/: Cargo.toml  manifest.toml
blue-download/src/: lib.rs
blue-module-runner/: Cargo.toml
blue-module-runner/src/: main.rs
blue-process/: Cargo.toml  manifest.toml
blue-process/src/: lib.rs
blue-render-cli/: Cargo.toml
blue-render-cli/src/: lib.rs  table.rs
blue-render-core/: Cargo.toml
blue-render-core/src/: lib.rs
blue-system/: Cargo.toml  manifest.toml
blue-system/src/: lib.rs
clients/cli/: Cargo.toml
clients/cli/src/: chat.rs  local.rs  main.rs  persistence.rs  ray.rs  remote.rs  server.rs
clients/cli/src/interactive/: chat_mode.rs  cli.rs  command_parser.rs  commands.rs  context.rs  mod.rs  mode.rs  mode_handler.rs  prism_executor.rs  prompt.rs
clients/cli/src/interactive/modes/: chat_mode.rs  mod.rs  prism_mode.rs  shell_mode.rs
clients/cli/src/parsing/: cli_args.rs  cli_commands.rs  cli_preprocessor.rs  mod.rs
clients/cli/src/rendering/: cli_card.rs  cli_csv.rs  cli_help.rs  cli_raw.rs  cli_renderer.rs  cli_stream.rs  cli_table.rs  mod.rs
clients/lambda/: Cargo.toml  build.sh  template.yaml
clients/lambda/src/: api_gateway.rs  handler.rs  main.rs
clients/ultraviolet-web/: package-lock.json  package.json
clients/ultraviolet-web/src/: App.css
clients/ultraviolet-web/src/components/: App.js  ChatView.js  ConversationHistory.js  FileContextPanel.js  Navigation.js  PrismExplorer.js  StatusBar.js
clients/ultraviolet-web/src/services/: AgentChatService.js  ChatService.js  ConnectionManager.js  ConversationStorage.js  PrismDiscovery.js
docker/: build-and-run.sh  supervisord.conf  tailscale-entrypoint.sh
docs/: DESIGN.md
docs/api/: README.md
docs/examples/: photon-types.md  pulse-examples.md
docs/guide/: README.md
docs/specs/: composition-architecture.md  distributed-architecture.md  enhanced-cli.md  prism-api.md  process-management.md  pulse-protocol.md  spectrum.md  typed-photons.md  ui-rendering.md  web-server.md
prisms/ai/agent/: Cargo.toml  spectrum.json
prisms/ai/agent/src/: action_executor.rs  agent_flow.rs  context_collector.rs  lib.rs  spectrum.rs
prisms/ai/context/: Cargo.toml  spectrum-pure.json  spectrum.json
prisms/ai/context/src/: lib.rs  spectrum.rs
prisms/ai/knowledge/: Cargo.toml  spectrum.json
prisms/ai/knowledge/src/: lib.rs  spectrum.rs  storage.rs
prisms/ai/mcp/: Cargo.toml  README.md  mcp.json.example  spectrum.json
prisms/ai/mcp/src/: client.rs  lib.rs  spectrum.rs
prisms/aws/accounts/: Cargo.toml  spectrum.json
prisms/aws/accounts/src/: lib.rs  old.rs  spectrum.rs
prisms/aws/ada/: Cargo.toml  spectrum.json
prisms/aws/ada/src/: lib.rs  spectrum.rs
prisms/aws/burner/: Cargo.toml  spectrum.json
prisms/aws/burner/src/: lib.rs  spectrum.rs
prisms/aws/cdk/: Cargo.toml  spectrum.json
prisms/aws/cdk/src/: aws.rs  lib.rs  spectrum.rs
prisms/aws/cdk/src/resources/: ecr.rs  iam.rs  logs.rs  mod.rs  s3.rs
prisms/aws/cradle/: Cargo.toml  spectrum.json
prisms/aws/cradle/src/: lib.rs  models.rs  spectrum.rs
prisms/aws/curl/: Cargo.toml  spectrum.json
prisms/aws/curl/src/: lib.rs  spectrum.rs
prisms/aws/governance/: Cargo.toml  spectrum.json
prisms/aws/governance/src/: lib.rs  models.rs  report.rs  spectrum.rs
prisms/aws/oppie/: Cargo.toml  spectrum.json
prisms/aws/oppie/src/: lib.rs  spectrum.rs  writer.rs
prisms/aws/oppie/src/extractors/: asr.rs  cti.rs  fua.rs  mod.rs  org.rs  policy_engine.rs  sas.rs  shepherd.rs
prisms/core/bedrock/: Cargo.toml  spectrum.json
prisms/core/command/: Cargo.toml  spectrum.json
prisms/core/ollama/: Cargo.toml  spectrum.json
prisms/core/openrouter/: Cargo.toml  spectrum.json
prisms/core/openrouter/src/: lib.rs  spectrum.rs
prisms/core/persistence/: Cargo.toml  spectrum.json
prisms/core/persistence/src/: lib.rs  spectrum.rs
prisms/core/q/: Cargo.toml  spectrum.json
prisms/core/q/src/: lib.rs  (+1 more)
prisms/example/echo/: Cargo.toml  spectrum.json
prisms/example/echo/src/: lib.rs  spectrum.rs
prisms/system/datetime/: Cargo.toml  README.md  spectrum.json
prisms/system/datetime/src/: lib.rs
prisms/system/deploy/: Cargo.toml  spectrum.json
prisms/system/deploy/src/: lib.rs  spectrum.rs
prisms/system/discovery/: Cargo.toml  spectrum.json
prisms/system/discovery/src/: lib.rs
prisms/system/remote/: Cargo.toml  spectrum.json
prisms/system/remote/src/: lib.rs  spectrum.rs
prisms/system/timer/: Cargo.toml  README.md  spectrum.json
scripts/: build-lambda-package.sh  build-web.sh  install-uv.sh  install.sh
uv-cli/: Cargo.toml
uv-cli/src/: args.rs  main.rs  renderer.rs  ws_client.rs
uv-core/: Cargo.toml
uv-core/src/: command_parser.rs  error.rs  lib.rs  link.rs  multiplexer.rs  prism.rs  prism_core.rs  pulse.rs  refraction.rs  spectrum.rs  transport.rs
uv-core/src/args_processor/: mod.rs  parser.rs  processor.rs
uv-service/: Cargo.toml  test-client.html
uv-service/src/: lib.rs  main.rs  options.rs  request_handler.rs  router.rs  server.rs  uv_handler.rs
uv-ui/: Cargo.toml
uv-ui/src/: components.rs  detectors.rs  inference.rs  lib.rs
(+19 files in other folders)
