[workspace]
resolver = "2"
members = [
    "uv-core",
    "uv-service",

    "clients/cli",

    "prisms/core/bedrock",
    "prisms/core/command",
    "prisms/core/persistence",
    "prisms/system/discovery",
    "prisms/system/remote"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
