[workspace]
resolver = "2"
members = [
    "uv-core",
    "uv-service",

    "clients/cli",
    "clients/lambda",

    "prisms/core/bedrock",
    "prisms/core/q",
    "prisms/core/command",
    "prisms/core/persistence",
    "prisms/system/discovery",
    "prisms/system/remote",
    "prisms/system/deploy",
    "prisms/ai/context",
    "prisms/ai/agent",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
