[package]
name = "blue-ada"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blue-core = { path = "../blue-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-iam = "0.32.0"
aws-sdk-sts = "0.32.0"
dirs = "5.0.0"   # For cross-platform home directory detection
regex = "1.7.0"  # For parsing credentials file
