[package]
name = "blue-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blue-core = { path = "../blue-core" }
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-server = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
include_dir = "0.7"
tempfile = "3.8"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
