[package]
name = "blue-core-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blue-core = { path = "../blue-core" }
aws-config = "1.0"
aws-sdk-bedrockruntime = "1.0"
aws-credential-types = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
