[package]
name = "blue-core-cmd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blue-core = { path = "../blue-core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
