[package]
name = "blue-core-download"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blue-core = { path = "../blue-core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
