[package]
name = "blue-system"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Build as a dynamic library

[dependencies]
blue-core = { path = "../blue-core" }
sysinfo = "0.30"
psutil = "3.2"
humansize = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
gethostname = "0.4"
