[package]
name = "uv-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
uv-core = { path = "../uv-core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
