[package]
name = "uv-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
uv-core = { path = "../uv-core" }
uv-ui = { path = "../uv-ui" }
uv-service = { path = "../uv-service" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.4"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
portpicker = "0.1"
anyhow = "1.0"
