[package]
name = "uv-service"
version = "0.1.0"
edition = "2021"
description = "WebSocket service for the Ultraviolet system"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
uv-core = { path = "../uv-core" }
dirs = "5.0"
