[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
uv-core = { path = "../../uv-core" }
uv-service = { path = "../../uv-service" }
uv-ui = { path = "../../uv-ui" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = "0.3"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
colored = "2.0"