[package]
name = "uv_prism_ai_agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
