[package]
name = "uv_prism_aws_ada"
version = "0.1.0"
edition = "2021"
description = "AWS Ada credentials management prism"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "4.0"
tokio = { version = "1", features = ["full"] }
aws-config = "0.55"
aws-sdk-sts = "0.28"
aws-sdk-iam = "0.28"
chrono = "0.4"
