[package]
name = "uv_prism_aws_ada"
version = "0.1.0"
edition = "2021"
description = "AWS Ada credentials management prism"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "4.0"
tokio = { version = "1", features = ["full"] }
aws-config = "1.6.1"
aws-sdk-sts = "1.66.0"
aws-sdk-iam = "1.68.0"
aws-sdk-ecs = "1.75.1"
aws-sdk-ec2 = "1.124.0"
chrono = "0.4"
