[package]
name = "uv_prism_aws_cradle"
version = "0.1.0"
edition = "2021"

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[lib]
crate-type = ["cdylib"]
