[package]
name = "uv_prism_aws_curl"
version = "0.1.0"
edition = "2021"
description = "Curl prism for making HTTP requests with Amazon internal auth"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
