[package]
name = "uv_prism_aws_governance"
version = "0.1.0"
edition = "2021"
description = "AWS Governance management"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
hex = "0.4"
flate2 = "1.0"
