[package]
name = "uv_prism_aws_oppie"
version = "0.1.0"
edition = "2021"

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
urlencoding = "2.1"

[lib]
crate-type = ["cdylib"]
