[package]
name = "uv_prism_system_discovery"
version = "0.1.0"
edition = "2021"
description = "Discovery prism for finding and inspecting prisms in the system"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
