[package]
name = "uv_prism_system_remote"
version = "0.1.0"
authors = ["Ultraviolet Team"]
edition = "2021"

[dependencies]
uv-core = { path = "../../../uv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
url = "2.3"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
